--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
   </head>
   <body>
     <main>
-      <section class="new-item">
-        <form action="">
-          <input
-            class="new-item-text"
-            type="text"
-            placeholder="Don't forget to..."
-          />
-          <button class="btn new-item-btn">➕</button>
-        </form>
-      </section>
+      <form class="new-item-form" action="">
+        <input
+          class="new-item-text"
+          type="text"
+          placeholder="Don't forget to..."
+        />
+        <button class="btn new-item-btn">➕</button>
+      </form>
       <section class="list-control hidden">
         <p class="list-length"></p>
         <div class="filter-items">
-          <span>Show</span>
+          <label for="show-type">Show</label>
           <select name="show-type" id="show-type" class="filter-items-menu">
             <option value="all">All</option>
             <option value="completed">Completed</option>
@@ -31,8 +29,8 @@
           </select>
         </div>
         <div class="delete-items">
-          <button class="btn delete-items-btn">❌</button>
-          <select name="show-type" id="show-type" class="delete-items-menu">
+          <label for="delete-type">✖</label>
+          <select name="delete-type" id="delete-type" class="delete-items-menu">
             <option value="all">All</option>
             <option value="completed">completed</option>
           </select>
