Savig before filter/delete feature change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </select>
         </div>
         <div class="delete-items">
-          <label for="delete-type">✖</label>
+          <button class="delete-items-btn">✖</button>
           <select name="delete-type" id="delete-type" class="delete-items-menu">
             <option value="all">All</option>
             <option value="completed">completed</option>
