Finished list controlsection

--- a/index.html
+++ b/index.html
@@ -21,20 +21,13 @@
       <section class="list-control hidden">
         <p class="list-length"></p>
         <div class="filter-items">
-          <label for="show-type">Show</label>
           <select name="show-type" id="show-type" class="filter-items-menu">
             <option value="all">All</option>
             <option value="completed">Completed</option>
             <option value="not-completed">Not completed</option>
           </select>
         </div>
-        <div class="delete-items">
-          <button class="delete-items-btn">✖</button>
-          <select name="delete-type" id="delete-type" class="delete-items-menu">
-            <option value="all">All</option>
-            <option value="completed">completed</option>
-          </select>
-        </div>
+        <button class="btn delete-items">✖</button>
       </section>
       <ul class="list">
         <!-- <li class="list-item">
