Finished all features and styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           type="text"
           placeholder="Don't forget to..."
         />
-        <button class="btn new-item-btn">➕</button>
+        <button class="btn new-item-btn">+</button>
       </form>
       <section class="list-control hidden">
         <p class="list-length"></p>
